Port away from TreeView
GtkTreeView is deprecated and not accessible in GTK4, so apps using it are not usable for screen reader users. We should port to newer widgets (GtkListView, GtkColumnView) as soon as possible.
Core Apps
Basic
-
Calculator -
Console -
Document Viewer / Evince / Papers (https://gitlab.gnome.org/pabloyoyoista/papers/-/issues/26) -
lots of places. In particular and mostly relevant, all the sidebars + the find one (some taken care in Papers after GTK4 port)
-
-
Files / Nautilus -
App chooser -
Entry completion
-
-
Loupe -
Initial Setup -
Settings / gnome-control-center -
Software -
Text Editor -
Videos / totem (still GTK3)
Portals
-
File picker -
Print dialog
Others
-
Boxes (still GTK3) -
Calendar -
Characters -
Clocks -
Connections (still GTK3) -
Contacts -
Disks / gnome-disk-utility (still GTK3) -
Sidebar
-
-
Disk Usage Analyzer / baobab -
Sidebar
-
-
Document Scanner / Simple-scan -
Fonts / gnome-font-viewer -
Help / yelp (still GTK3) -
Logs -
Maps -
Music -
Snapshot -
System Monitor -
Processes view
-
-
Tour -
Weather -
Web / epiphany -
Clear website data Teams/Design/app-mockups#71 -
Languages -
Synced tabs Teams/Design/app-mockups#72 -
Additional URLs -
Site security info Teams/Design/app-mockups#70
-
-
Orca -
Lots of places orca#451
-
-
gnome-color-manager / gcm-viewer (called by Settings' Color panel) (still GTK3)
Extra Apps
-
Builder / gnome-builder -
Search -
Debugger
-
-
D-Spy -
Extensions -
Fractal -
Geary (still GTK3) -
Podcasts -
Polari -
Passwords and Secrets / seahorse -
Shotwell (Already planned as part of the GTK4 port) -
Mahjongg
Edited by Adrien Plazas