src/gl-searchpopover.c
@@ -32,19 +32,13 @@ struct _GlSearchPopover
 typedef struct
 {
     /* Search popover elements */
-    GtkWidget *parameter_stack;
     GtkWidget *parameter_button_label;
-    GtkWidget *parameter_label_stack;
-    GtkWidget *parameter_treeview;
-    GtkListStore *parameter_liststore;
+    GtkWidget *parameter_dropdown;
     GtkWidget *search_type_revealer;
-    GtkWidget *range_stack;
-    GtkWidget *range_label_stack;
-    GtkWidget *range_treeview;
+    GtkWidget *range_dropdown;
     GtkWidget *range_button_label;
+    GtkStringList *custom_range_list;
     GtkWidget *clear_range_button;
-    GtkWidget *range_button_drop_down_image;
-    GtkListStore *range_liststore;
     GtkWidget *menu_stack;
 
     GtkWidget *start_date_stack;
@@ -126,110 +120,20 @@ static void start_time_spinbox_value_changed (GtkSpinButton *spin_button,
 static void end_time_spinbox_value_changed (GtkSpinButton *spin_button,
                                             gpointer user_data);
 
-/* Event handlers for search popover elements */
 static void
-search_popover_closed (GtkPopover *popover,
-                       gpointer user_data)
-{
-    GlSearchPopoverPrivate *priv;
-
-    priv = gl_search_popover_get_instance_private (GL_SEARCH_POPOVER (user_data));
-
-    gtk_stack_set_visible_child_name (GTK_STACK (priv->parameter_stack), "parameter-button");
-    gtk_stack_set_visible_child_name (GTK_STACK (priv->parameter_label_stack), "what-label");
-
-    gtk_stack_set_visible_child_name (GTK_STACK (priv->range_stack), "range-button");
-    gtk_stack_set_visible_child_name (GTK_STACK (priv->range_label_stack), "when-label");
-}
-
-static void
-select_parameter_button_clicked (GtkButton *button,
-                                 gpointer user_data)
-{
-    GlSearchPopoverPrivate *priv;
-    GtkTreeSelection *selection;
-    GtkTreeModel *model;
-    GtkTreeIter iter;
-    gboolean valid;
-
-    priv = gl_search_popover_get_instance_private (GL_SEARCH_POPOVER (user_data));
-
-    gtk_stack_set_visible_child_name (GTK_STACK (priv->parameter_stack), "parameter-list");
-    gtk_stack_set_visible_child_name (GTK_STACK (priv->parameter_label_stack), "select-parameter-label");
-
-    gtk_stack_set_visible_child_name (GTK_STACK (priv->range_stack), "range-button");
-    gtk_stack_set_visible_child_name (GTK_STACK (priv->range_label_stack), "when-label");
-
-    model = GTK_TREE_MODEL (priv->parameter_liststore);
-
-    valid = gtk_tree_model_get_iter_first (model, &iter);
-
-    while (valid)
-    {
-        GlSearchPopoverJournalFieldFilter journal_field_enum_value;
-
-        gtk_tree_model_get (GTK_TREE_MODEL (priv->parameter_liststore), &iter,
-                            COLUMN_JOURNAL_FIELD_ENUM_VALUE, &journal_field_enum_value,
-                            -1);
-
-        if (priv->journal_search_field == journal_field_enum_value)
-        {
-            break;
-        }
-
-        valid = gtk_tree_model_iter_next (model, &iter);
-    }
-
-    selection = gtk_tree_view_get_selection (GTK_TREE_VIEW (priv->parameter_treeview));
-
-    gtk_tree_selection_select_iter (selection, &iter);
-}
-
-static gboolean
-parameter_treeview_row_seperator (GtkTreeModel *model,
-                                  GtkTreeIter *iter,
-                                  gpointer user_data)
+on_parameters_dropdown_selected_changed (GtkDropDown *drop_down,
+                                         GParamSpec  *pspec,
+                                         gpointer user_data)
 {
     GlSearchPopover *popover;
     GlSearchPopoverPrivate *priv;
-    gboolean show_separator;
-
-    popover = GL_SEARCH_POPOVER (user_data);
-
-    priv = gl_search_popover_get_instance_private (popover);
-
-    gtk_tree_model_get (GTK_TREE_MODEL (priv->parameter_liststore), iter,
-                        COLUMN_JOURNAL_FIELD_SHOW_SEPARATOR, &show_separator,
-                        -1);
-
-    return show_separator;
-}
-
-static void
-on_parameter_treeview_row_activated (GtkTreeView *tree_view,
-                                     GtkTreePath *path,
-                                     GtkTreeViewColumn *column,
-                                     gpointer user_data)
-{
-    GtkTreeIter iter;
-    GlSearchPopover *popover;
-    GlSearchPopoverPrivate *priv;
-    gchar *journal_field_label;
     GlSearchPopoverJournalFieldFilter journal_field_enum_value;
 
     popover = GL_SEARCH_POPOVER (user_data);
 
     priv = gl_search_popover_get_instance_private (popover);
 
-    gtk_tree_model_get_iter (GTK_TREE_MODEL (priv->parameter_liststore), &iter, path);
-
-    gtk_tree_model_get (GTK_TREE_MODEL (priv->parameter_liststore), &iter,
-                        COLUMN_JOURNAL_FIELD_LABEL, &journal_field_label,
-                        COLUMN_JOURNAL_FIELD_ENUM_VALUE, &journal_field_enum_value,
-                        -1);
-
-    gtk_label_set_label (GTK_LABEL (priv->parameter_button_label),
-                         _(journal_field_label));
+    journal_field_enum_value = gtk_drop_down_get_selected (drop_down);
 
     priv->journal_search_field = journal_field_enum_value;
 
@@ -247,11 +151,6 @@ on_parameter_treeview_row_activated (GtkTreeView *tree_view,
         gtk_widget_set_visible (priv->search_type_revealer, TRUE);
         gtk_revealer_set_reveal_child (GTK_REVEALER (priv->search_type_revealer), TRUE);
     }
-
-    gtk_stack_set_visible_child_name (GTK_STACK (priv->parameter_stack), "parameter-button");
-    gtk_stack_set_visible_child_name (GTK_STACK (priv->parameter_label_stack), "what-label");
-
-    g_free (journal_field_label);
 }
 
 static void
@@ -359,69 +258,6 @@ gl_search_popover_set_property (GObject *object,
             G_OBJECT_WARN_INVALID_PROPERTY_ID (object, prop_id, pspec);
             break;
     }
-}
-
-static void
-select_range_button_clicked (GtkButton *button,
-                             gpointer user_data)
-{
-    GlSearchPopoverPrivate *priv;
-    GtkTreeSelection *selection;
-    GtkTreeModel *model;
-    GtkTreeIter iter;
-    gboolean valid;
-
-    priv = gl_search_popover_get_instance_private (GL_SEARCH_POPOVER (user_data));
-
-    gtk_stack_set_visible_child_name (GTK_STACK (priv->range_stack), "range-list");
-    gtk_stack_set_visible_child_name (GTK_STACK (priv->range_label_stack), "show-log-from-label");
-
-    gtk_stack_set_visible_child_name (GTK_STACK (priv->parameter_stack), "parameter-button");
-    gtk_stack_set_visible_child_name (GTK_STACK (priv->parameter_label_stack), "what-label");
-
-    model = GTK_TREE_MODEL (priv->range_liststore);
-
-    valid = gtk_tree_model_get_iter_first (model, &iter);
-
-    while (valid)
-    {
-        GlSearchPopoverJournalTimestampRange journal_range_enum_value;
-
-        gtk_tree_model_get (GTK_TREE_MODEL (priv->range_liststore), &iter,
-                            COLUMN_JOURNAL_TIMESTAMP_RANGE_ENUM_VALUE, &journal_range_enum_value,
-                            -1);
-
-        if (priv->journal_timestamp_range == journal_range_enum_value)
-        {
-            break;
-        }
-
-        valid = gtk_tree_model_iter_next (model, &iter);
-    }
-
-    selection = gtk_tree_view_get_selection (GTK_TREE_VIEW (priv->range_treeview));
-
-    gtk_tree_selection_select_iter (selection, &iter);
-}
-
-static gboolean
-range_treeview_row_seperator (GtkTreeModel *model,
-                              GtkTreeIter *iter,
-                              gpointer user_data)
-{
-    GlSearchPopover *popover;
-    GlSearchPopoverPrivate *priv;
-    gboolean show_seperator;
-
-    popover = GL_SEARCH_POPOVER (user_data);
-
-    priv = gl_search_popover_get_instance_private (popover);
-
-    gtk_tree_model_get (GTK_TREE_MODEL (priv->range_liststore), iter,
-                        COLUMN_JOURNAL_TIMESTAMP_RANGE_SHOW_SEPARATOR, &show_seperator,
-                        -1);
-
-    return show_seperator;
 }
 
 static void
@@ -534,13 +370,10 @@ reset_custom_range_widgets (GlSearchPopover *popover)
 }
 
 static void
-on_range_treeview_row_activated (GtkTreeView *tree_view,
-                                 GtkTreePath *path,
-                                 GtkTreeViewColumn *column,
-                                 gpointer user_data)
+on_range_dropdown_selected_changed (GtkDropDown *drop_down,
+                                    GParamSpec  *pspec,
+                                    gpointer user_data)
 {
-    GtkTreeIter iter;
-    gchar *range_label;
     GlSearchPopoverJournalTimestampRange journal_range_enum_value;
     GlSearchPopover *popover;
     GlSearchPopoverPrivate *priv;
@@ -549,12 +382,7 @@ on_range_treeview_row_activated (GtkTreeView *tree_view,
 
     priv = gl_search_popover_get_instance_private (popover);
 
-    gtk_tree_model_get_iter (GTK_TREE_MODEL (priv->range_liststore), &iter, path);
-
-    gtk_tree_model_get (GTK_TREE_MODEL (priv->range_liststore), &iter,
-                        COLUMN_JOURNAL_TIMESTAMP_RANGE_LABEL, &range_label,
-                        COLUMN_JOURNAL_TIMESTAMP_RANGE_ENUM_VALUE, &journal_range_enum_value,
-                        -1);
+    journal_range_enum_value = gtk_drop_down_get_selected (drop_down);
 
     priv->journal_timestamp_range = journal_range_enum_value;
 
@@ -567,17 +395,9 @@ on_range_treeview_row_activated (GtkTreeView *tree_view,
         /* Reset the Custom Range elements if set as only one filter can be applied at time */
         reset_custom_range_widgets (popover);
 
-        gtk_label_set_label (GTK_LABEL (priv->range_button_label),
-                             _(range_label));
-
         g_object_notify_by_pspec (G_OBJECT (popover),
                                   obj_properties[PROP_JOURNAL_TIMESTAMP_RANGE]);
-
-        gtk_stack_set_visible_child_name (GTK_STACK (priv->range_stack), "range-button");
-        gtk_stack_set_visible_child_name (GTK_STACK (priv->range_label_stack), "when-label");
     }
-
-    g_free (range_label);
 }
 
 static void
@@ -699,6 +519,10 @@ update_range_button (GlSearchPopover *popover)
 
         g_free (display_time);
     }
+    else if (!priv->custom_start_timestamp && !priv->custom_end_timestamp)
+    {
+        range_button_label = g_strdup (_("Set Custom Range…"));
+    }
     else
     {
         display_time = gl_util_timestamp_to_display (priv->custom_end_timestamp,
@@ -713,10 +537,8 @@ update_range_button (GlSearchPopover *popover)
         g_free (display_time);
     }
 
-    gtk_label_set_label (GTK_LABEL (priv->range_button_label), range_button_label);
-
-    gtk_stack_set_visible_child_name (GTK_STACK (priv->range_stack), "range-button");
-    gtk_stack_set_visible_child_name (GTK_STACK (priv->range_label_stack), "when-label");
+    gtk_string_list_splice (priv->custom_range_list, 0, 1,
+                            (const char *[]) { range_button_label, NULL });
 
     g_date_time_unref (now);
     g_free (range_button_label);
@@ -1267,14 +1089,14 @@ custom_range_submenu_back_button_clicked (GtkButton *button,
 
     priv = gl_search_popover_get_instance_private (popover);
 
+    update_range_button (popover);
+
     /* Default to Current boot if none of the timestamp was set */
     if (!priv->custom_start_timestamp && !priv->custom_end_timestamp)
     {
         gl_search_popover_set_journal_timestamp_range_current_boot (popover);
     }
 
-    gtk_stack_set_visible_child_name (GTK_STACK (priv->range_stack), "range-button");
-    gtk_stack_set_visible_child_name (GTK_STACK (priv->range_label_stack), "when-label");
     gtk_stack_set_visible_child_name (GTK_STACK (priv->menu_stack), "main");
 }
 
@@ -1313,8 +1135,77 @@ gl_search_popover_set_journal_timestamp_range_current_boot (GlSearchPopover *pop
     g_object_notify_by_pspec (G_OBJECT (popover),
                               obj_properties[PROP_JOURNAL_TIMESTAMP_RANGE]);
 
-    gtk_label_set_label (GTK_LABEL (priv->range_button_label),
-                         _("Current Boot"));
+    gtk_drop_down_set_selected (GTK_DROP_DOWN (priv->range_dropdown), priv->journal_timestamp_range);
+}
+
+static void
+create_range_string_models (GlSearchPopover *popover)
+{
+    GlSearchPopoverPrivate *priv;
+    g_autoptr (GtkFlattenListModel) flatten = NULL;
+    GListStore *store = g_list_store_new (GTK_TYPE_STRING_LIST);
+    GtkStringList *strings;
+
+    priv = gl_search_popover_get_instance_private (popover);
+
+    /* Add entries in the same order as GlSearchPopoverJournalTimestampRange */
+
+    strings = gtk_string_list_new ((const char *[]) { _("Current Boot"), _("Previous Boot") , NULL });
+    g_list_store_append (store, strings);
+    g_object_unref (strings);
+
+    strings = gtk_string_list_new ((const char *[]) { _("Today"), _("Yesterday"), ("Last 3 days"), NULL });
+    g_list_store_append (store, strings);
+    g_object_unref (strings);
+
+    strings = gtk_string_list_new ((const char *[]) { _("Entire Journal"), NULL });
+    g_list_store_append (store, strings);
+    g_object_unref (strings);
+
+    /* This last one is special and we'll keep it to update later */
+    priv->custom_range_list = gtk_string_list_new ((const char *[]) { _("Set Custom Range…"), NULL });
+    g_list_store_append (store, priv->custom_range_list);
+
+    flatten = gtk_flatten_list_model_new (G_LIST_MODEL (store));
+
+    gtk_drop_down_set_model (GTK_DROP_DOWN (priv->range_dropdown), G_LIST_MODEL (flatten));
+}
+
+static void
+create_parameter_string_models (GlSearchPopover *popover)
+{
+    GlSearchPopoverPrivate *priv;
+    g_autoptr (GtkFlattenListModel) flatten = NULL;
+    GListStore *store = g_list_store_new (G_TYPE_LIST_MODEL);
+    GtkStringList *strings;
+
+    priv = gl_search_popover_get_instance_private (popover);
+
+    /* Add entries in the same order as GlSearchPopoverJournalFieldFilter */
+
+    strings = gtk_string_list_new ((const char *[]) { _("All Available Fields"), NULL });
+    g_list_store_append (store, strings);
+    g_object_unref (strings);
+
+    strings = gtk_string_list_new ((const char *[])
+                                   { _("PID"), _("UID"), _("GID"), _("Message"),
+                                   _("Process Name"), _("Systemd Unit"), _("Kernel Device"),
+                                   _("Audit Session"), _("Executable Path"), NULL });
+    g_list_store_append (store, strings);
+    g_object_unref (strings);
+
+    flatten = gtk_flatten_list_model_new (G_LIST_MODEL (store));
+
+    gtk_drop_down_set_model (GTK_DROP_DOWN (priv->parameter_dropdown), G_LIST_MODEL (flatten));
+}
+
+static void
+gl_search_popover_finalize (GObject *object)
+{
+    GlSearchPopover *popover = GL_SEARCH_POPOVER (object);
+    GlSearchPopoverPrivate *priv = gl_search_popover_get_instance_private (popover);
+
+    g_clear_object (&priv->custom_range_list);
 }
 
 static void
@@ -1324,6 +1215,7 @@ gl_search_popover_class_init (GlSearchPopoverClass *klass)
     GtkWidgetClass *widget_class = GTK_WIDGET_CLASS (klass);
 
     gobject_class->get_property = gl_search_popover_get_property;
+    gobject_class->finalize = gl_search_popover_finalize;
     gobject_class->set_property = gl_search_popover_set_property;
 
     obj_properties[PROP_JOURNAL_SEARCH_FIELD] = g_param_spec_enum ("journal-search-field", "Journal Search Field",
@@ -1353,29 +1245,11 @@ gl_search_popover_class_init (GlSearchPopoverClass *klass)
     gtk_widget_class_set_template_from_resource (widget_class,
                                                  "/org/gnome/Logs/gl-searchpopover.ui");
     gtk_widget_class_bind_template_child_private (widget_class, GlSearchPopover,
-                                                  parameter_stack);
-    gtk_widget_class_bind_template_child_private (widget_class, GlSearchPopover,
-                                                  parameter_button_label);
-    gtk_widget_class_bind_template_child_private (widget_class, GlSearchPopover,
-                                                  parameter_label_stack);
-    gtk_widget_class_bind_template_child_private (widget_class, GlSearchPopover,
-                                                  parameter_treeview);
-    gtk_widget_class_bind_template_child_private (widget_class, GlSearchPopover,
-                                                  parameter_liststore);
+                                                  parameter_dropdown);
     gtk_widget_class_bind_template_child_private (widget_class, GlSearchPopover,
                                                   search_type_revealer);
     gtk_widget_class_bind_template_child_private (widget_class, GlSearchPopover,
-                                                  range_stack);
-    gtk_widget_class_bind_template_child_private (widget_class, GlSearchPopover,
-                                                  range_label_stack);
-    gtk_widget_class_bind_template_child_private (widget_class, GlSearchPopover,
-                                                  range_treeview);
-    gtk_widget_class_bind_template_child_private (widget_class, GlSearchPopover,
-                                                  range_button_label);
-    gtk_widget_class_bind_template_child_private (widget_class, GlSearchPopover,
-                                                  range_button_drop_down_image);
-    gtk_widget_class_bind_template_child_private (widget_class, GlSearchPopover,
-                                                  range_liststore);
+                                                  range_dropdown);
     gtk_widget_class_bind_template_child_private (widget_class, GlSearchPopover,
                                                   menu_stack);
     gtk_widget_class_bind_template_child_private (widget_class, GlSearchPopover,
@@ -1425,17 +1299,9 @@ gl_search_popover_class_init (GlSearchPopoverClass *klass)
 
 
     gtk_widget_class_bind_template_callback (widget_class,
-                                             search_popover_closed);
-    gtk_widget_class_bind_template_callback (widget_class,
-                                             select_parameter_button_clicked);
-    gtk_widget_class_bind_template_callback (widget_class,
-                                             on_parameter_treeview_row_activated);
-    gtk_widget_class_bind_template_callback (widget_class,
                                              search_type_changed);
     gtk_widget_class_bind_template_callback (widget_class,
-                                             select_range_button_clicked);
-    gtk_widget_class_bind_template_callback (widget_class,
-                                             on_range_treeview_row_activated);
+                                             on_range_dropdown_selected_changed);
     gtk_widget_class_bind_template_callback (widget_class,
                                              custom_range_submenu_back_button_clicked);
     gtk_widget_class_bind_template_callback (widget_class,
@@ -1466,6 +1332,8 @@ gl_search_popover_class_init (GlSearchPopoverClass *klass)
                                              start_date_calendar_day_selected);
     gtk_widget_class_bind_template_callback (widget_class,
                                              start_date_button_clicked);
+    gtk_widget_class_bind_template_callback (widget_class,
+                                             on_parameters_dropdown_selected_changed);
 }
 
 static void
@@ -1478,15 +1346,8 @@ gl_search_popover_init (GlSearchPopover *popover)
 
     priv = gl_search_popover_get_instance_private (popover);
 
-    gtk_tree_view_set_row_separator_func (GTK_TREE_VIEW (priv->parameter_treeview),
-                                          (GtkTreeViewRowSeparatorFunc) parameter_treeview_row_seperator,
-                                          popover,
-                                          NULL);
-
-    gtk_tree_view_set_row_separator_func (GTK_TREE_VIEW (priv->range_treeview),
-                                          (GtkTreeViewRowSeparatorFunc) range_treeview_row_seperator,
-                                          popover,
-                                          NULL);
+    create_range_string_models (popover);
+    create_parameter_string_models (popover);
 
     settings = g_settings_new (DESKTOP_SCHEMA);
     priv->clock_format = g_settings_get_enum (settings, CLOCK_FORMAT);
